# Vadim-Khristenko

./: .gitignore  README.md  pyproject.toml
.forgejo/workflows/: profile-engine.yml  windows-runner-test.yml
.github/workflows/: profile-engine.yml  refresh-game-art.yml
assets/games/: manifest.json
config/: flagship.toml  profile.toml  providers.toml  stats.toml
engine/: Cargo.toml  README.md
engine/fixtures/: codeberg.json  gen_fixtures.js  github.json  github_contributions.html  lastfm_recent.json  lastfm_top_artists.json  vai-git.json
engine/src/: art.rs  cli.rs  lastfm.rs  log.rs  main.rs  model.rs  paths.rs  readme.rs  run.rs  svg.rs  theme.rs
engine/src/cards/: bestgame.rs  dashboard.rs  divider.rs  flagship.rs  footer.rs  games.rs  header.rs  learning.rs  mod.rs  overflow_tests.rs  platforms.rs  research.rs  vibe.rs
engine/src/config/: flagship.rs  mod.rs  profile.rs  providers.rs  stats.rs
engine/src/providers/: fixture.rs  forgejo.rs  github.rs  mod.rs  retry.rs
scripts/: build.py  fetch_game_art.py
scripts/engine/: README.md  __init__.py  art.py  cli.py  content.py  data.py  log.py  readme.py  run.py  theme.py
scripts/engine/cards/: __init__.py  bestgame.py  dashboard.py  divider.py  footer.py  games.py  header.py  research.py  vibe.py
