[package]
name = "vai-profile"
version = "3.0.0"
edition = "2021"
description = "Self-regenerating multi-provider profile engine — Tokyo-Night animated SVG cards + live stats (GitHub · Codeberg · Forgejo)."
license = "MIT"
publish = false

[[bin]]
name = "vai-profile"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
